For the latest news, visit the SparForte web site.

Objective: Error message improvements

Known Issues

CHANGES SINCE 2.6.3

1. Fix: For constant specifications, when the specification is fulfilled the type of the assigned value is now verified with the type of the constant.  Previously the type was not verified.

2. Fix: command type variables must contain paths to files in a secure directory.
3. Fix: arrays with limited or constant elements cannot be rearranged by sorting, shuffling, rotating, shifting, or flipping.  to_array also cannt write to limited or constant elements.
