@@ -11,7 +11,7 @@ These are new issues identified but not entered into the outstanding bug list
 Long term Ongoing Work
 ----------------------
 
-- type art is array(1..2_ of integer; produces a constraint error
+- custom error for subtype x is array... where arrays must be a type
 
   - error messages and additional context
     - many error messages have the source arrow 1 position to the right
@@ -23,6 +23,8 @@ Long term Ongoing Work
     - messages in present or past tense not both
     - search for appropriate remedies
     - qp() - quiet mode capitalize first - and subjectNotes in err()
+    - of the core language, the compiler (err_tokenize) has not been
+      converted to the new format.  Does it make sense to do so?
   - error messages addressing common problems listed in StackOverflow
   - bash comparision and making the shell more standards compliant
     - add ctrl-c to pause / fg / bg commmands to SparForte, and maybe job control?
