@@ -1,0 +1,5 @@
+# This should fail
+
+i : integer := 1_ ; -- malformed numeric literal
+
+? i;
